# P2P-Journal

./: .gitignore  CLAUDE.md  package-lock.json
backend/: .env.example  GOTIFY_SETUP.md  pyproject.toml  requirements.txt  seed_user.py
backend/app/: __init__.py  config.py  constants.py  database.py  main.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: a8b593f33afc_initial_setup.py  b1c2d3e4f5a6_initial_setup.py
backend/app/middleware/: logging_middleware.py
backend/app/models/: __init__.py  base.py  buying.py  cycle.py  deposit.py  sale.py  user.py
backend/app/routers/: alerts.py  auth.py  binance.py  journal.py  p2p_me.py
backend/app/schemas/: auth.py  buying.py  cycle.py  deposit.py  price.py  sale.py
backend/app/services/: alert_service.py  auth_service.py  binance_service.py  computed_fields.py  gotify_service.py  journal_service.py  p2p_me_service.py
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/api/: alerts.ts  auth.ts  client.ts  health.ts  journal.ts  price.ts
frontend/src/components/common/: Badge.tsx  Button.tsx  Card.tsx  ConfirmModal.tsx  Input.tsx  Layout.tsx  MultiSelect.tsx  Select.tsx  Spinner.tsx
frontend/src/constants/: index.ts
frontend/src/hooks/: useAlerts.ts  useAuth.ts  useCurrentUser.ts  useCycles.ts  usePrice.ts
frontend/src/pages/: DashboardPage.tsx  JournalPage.tsx  LoginPage.tsx  StatusPage.tsx
frontend/src/store/: authStore.ts
frontend/src/types/: index.ts
(+12 files in other folders)
