[project]
name = "backend"
version = "0.1.0"
description = "P2P Trade Journal backend API"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlmodel>=0.0.22",
    "asyncpg>=0.30",
    "psycopg2-binary>=2.9",
    "alembic>=1.14",
    "httpx>=0.28",
    "web3>=7.0",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.0",
    "pydantic-settings>=2.0",
    "icecream>=2.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
